# tvb-widgets

./: .gitignore  README.md  check_k3d_api.py  check_k3d_api2.py  pyproject.toml  verify_improvement.py  verify_phase1.py  verify_phase2.py  verify_phase3.py  verify_phase4.py
notebooks/: .gitkeep  demo_widgets.ipynb
tests/: __init__.py  test_connectivity3d.py  test_surface3d.py
tvbwidgets_poc/: __init__.py  base_widget.py  connectivity3d.py  sensors3d.py  surface3d.py
